# Stack

Lakehouse/: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
Lakehouse/src/airflow/utils/: spark_config.yaml
Lakehouse/src/dbt/: dbt_project.yml  profiles.yml
Lakehouse/src/dbt/models/gold/: sources.yml  users.sql
Lakehouse/src/hive/config/: metastore-site.xml
Lakehouse/src/jobs/: ingest_minio.py  register_trino.py
Lakehouse/src/spark/: ingestion.py
Lakehouse/src/trino/etc/: config.properties
Lakehouse/src/trino/etc/catalog/: minio.properties
Lakehouse/src/trino/init_trino/: create_schemas.sql
